--- a/AuthIS4/AuthIS4.OrdersApi/Properties/launchSettings.json
+++ b/AuthIS4/AuthIS4.OrdersApi/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "AuthIS4.OrderApi": {
+    "AuthIS4.OrdersApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
