--- a/AuthIS4/AuthIS4_Core3_1.IdentityServer4Service/Properties/launchSettings.json
+++ b/AuthIS4/AuthIS4_Core3_1.IdentityServer4Service/Properties/launchSettings.json
@@ -1,10 +1,8 @@
 ﻿{
-  "profiles": {
-    "AuthIS4.IdentityServer4Service": {
+   "profiles": {
+    "AuthIS4_Core3_1.IdentityServer4Service": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "Home/Index",
       "applicationUrl": "https://localhost:10001;http://localhost:10000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
