--- a/AuthIS4/AuthIS4_Core3_1.IdentityServer4Service/AuthIS4_Core3_1.IdentityServer4Service.csproj
+++ b/AuthIS4/AuthIS4_Core3_1.IdentityServer4Service/AuthIS4_Core3_1.IdentityServer4Service.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.22" />
   </ItemGroup>
 
 </Project>
